# ChangeLog for app-text/highlight
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-text/highlight/ChangeLog,v 1.68 2013/07/21 10:02:58 pacho Exp $

  21 Jul 2013; Pacho Ramos <pacho@gentoo.org> metadata.xml:
  Cleanup due http://gentoo.2317880.n4.nabble.com/sgml-herd-has-no-maintainers-
  again-td259655.html

  02 Mar 2013; Markos Chandras <hwoarang@gentoo.org> highlight-3.12.ebuild,
  highlight-3.3.ebuild, highlight-3.9.ebuild:
  Move Qt dependencies to the new category

  20 Feb 2013; Agostino Sarubbo <ago@gentoo.org> highlight-3.9.ebuild:
  Stable for s390, wrt bug #436704

  21 Jan 2013; Agostino Sarubbo <ago@gentoo.org> highlight-3.9.ebuild:
  Stable for sparc, wrt bug #436704

  21 Jan 2013; Agostino Sarubbo <ago@gentoo.org> highlight-3.9.ebuild:
  Stable for ia64, wrt bug #436704

  20 Jan 2013; Agostino Sarubbo <ago@gentoo.org> highlight-3.9.ebuild:
  Stable for alpha, wrt bug #436704

  16 Jan 2013; Agostino Sarubbo <ago@gentoo.org> highlight-3.9.ebuild:
  Stable for ppc64, wrt bug #436704

  16 Jan 2013; Agostino Sarubbo <ago@gentoo.org> highlight-3.9.ebuild:
  Stable for ppc, wrt bug #436704

  15 Jan 2013; Markus Meier <maekke@gentoo.org> highlight-3.9.ebuild:
  arm stable, bug #436704

  15 Jan 2013; Jeroen Roovers <jer@gentoo.org> highlight-3.9.ebuild:
  Stable for HPPA (bug #436704).

  31 Dec 2012; Mike Frysinger <vapier@gentoo.org> highlight-3.12.ebuild,
  highlight-3.3.ebuild, highlight-3.9.ebuild:
  Move boost to DEPEND for all versions since it is not linked against, and move
  myhlopts setup out of pkg_setup and into src_compile since it is only used
  with src_* funcs.

  10 Nov 2012; Diego E. Pettenò <flameeyes@gentoo.org> highlight-3.12.ebuild:
  Drop usage of boost-utils since it's now pointless.

  06 Oct 2012; Mike Gilbert <floppym@gentoo.org> highlight-3.12.ebuild:
  Depend on pkgconfig, bug 437428 by Nikoli.
