@@ -3,17 +3,23 @@ Hash: SHA256
 
 AUX highlight-3.3-parallel-make.patch 323 SHA256 5e458765f8b2109f6c6a2dc65ae9fc131c023328d6620b49af923a40a9ec7083 SHA512 027ab4ca6970ba46c4d1081c848d8736707c7932c6951cfc1b0bbcb8e7dc1f4a7b5719328ef9a3e19713408fc6090a10ea59bfc288758095647f36c3b8f6ac4e WHIRLPOOL 5fc6b6dcd46d1e1f779c6b773ee57c05902bdaeb5af55e604afd6ab03750b415d86c8d6775396abb87945fb113c7e3aa6828bb28d54ffe8adabfb75e358f1fa9
 DIST highlight-3.12.tar.bz2 679786 SHA256 32f22fc63243c48ee7499c7834af50de4ed0ec84b12bd9acfaf7649e36083000 SHA512 850f59ebab9da6f38b0e42bdcdee1dd182cac31fcb8523ef88d0600cc44b682230e365918d3b97fd06ad167fcaaf69fbc0315bc848d485bcb071ff8009b10bf5 WHIRLPOOL 8fdb8eaa64ec16cc51d41dded86f0da833b7e07d92b697c0b6580f89a1cefbb9b102fe113e1f45b1289b09ad422d41f4282e4f2b3a241e7041d409456fa81353
+DIST highlight-3.16.tar.bz2 613356 SHA256 994e8da0b86549fb16c4590769731315d01db68e973c44d43931fcc628e79d77 SHA512 b637107f589ff475bda22e14a7a55a5af5adbae67a5c1b9081bd312646dc712ee8b9e04d3f760e485d4c311b0ef69ef71a5121ab7d70e0f55d3990a5c6134443 WHIRLPOOL 09af3cc7f77e409d3bdeec3979f390e30b9ffc47484274fc326de9011b55e7b10e825586a9bc2be5aa1e73dc1ab8b3623caa408766e2f7b9efff07fff470e4fc
 DIST highlight-3.3.tar.bz2 740651 SHA256 96c415d62488c6522e9933ecdfce447eb8eecd3b88a1064f42908c936ea02d87 SHA512 10530f485e57aa8068edddca3b0f75fcdd1c756d45740e7dd4eeaeb8b87cebd022f6283ecd37a057ef18f30e8cb56eeb412e8ba0c0542320a751b8b9c3dbf1c9 WHIRLPOOL 8b0ccfa97d5343b0edb2cf11d92116df4ebdac5d7157569d758c8eb2a113dd07612438ef9eeeda9138a7aa9d64c027ba5dab31054700acbc6823b6868ff4a77c
 DIST highlight-3.9.tar.bz2 683718 SHA256 4ae69795e3ca4ffef47355a7b6dc371e2d781735efd44fa12ff3a1ffc990daef SHA512 4f75232eae5f18f37666e04467993eab8ba983ec86ba6fbef4fbd6fea1e4b2a388beff75a72cfb00c1a90a6fa6dcab9cd68d40cde940f6aaff5174304102cada WHIRLPOOL 1d0ab7fa034fa16cf07318a1140d261942ad98b73108b1b83c578e98f836c9d933ad731320b8aa183f958572e10f3970f64b822954fe5065f8ec6692290f6e9a
 EBUILD highlight-3.12.ebuild 1738 SHA256 ee8fe6005d11ad0e4aae1adf221b18d9767f32156659731d9f207ead6ea18e6e SHA512 a05be64c68d258d582d5f2cf863eb5d1e12918abf350d7a796a53d9f2585b79818bda3f861d7b6f25eb7ef73e4fb61fbdfd05da30992260c7faed239bb2436e4 WHIRLPOOL d5cfb805065c0a17086b32393a188619e2b10a303e2c3ac14541527646cd8ee592f6a0713d6cc52f718af369453b4af08030ce00b9db9ea033a7fa515d4efdc8
+EBUILD highlight-3.16.ebuild 1815 SHA256 043dc819b9d86bc8fcd223a6404eb78f6caee6e94a9a72162bea956fa8245433 SHA512 fceed74c4022b25c43698a2093d649ccf74a09343ea17b9ce1918a99e28d6fec0c82b1f329fc06c5f31bbe3a1b9ed4c80e7cd251f172c2b8787ed395c992f5af WHIRLPOOL 4f1319ce74821bdd9861c905f0b27cf7d2a08a3f42f9512f17f321544a6de5eab1cb5b8fbc4dcc8181ea6666be2fcd9665dec89deb9a004b50d81de68f878a20
 EBUILD highlight-3.3.ebuild 1582 SHA256 c4c9011597f1db627cc7099e961119fe05013bf2dbc1accf76c29179c0756179 SHA512 091271a877678aa20bda86c4bd59223d464f1df3e312ed25ec7b27a6f5f044c5b8fbaa0f26e8d8aba20643b2b0fe0ab3de47c7355c8db8d5a6b11fa22333f0ae WHIRLPOOL 41e058e72d809ce5c6e3490fe726a0a69773b76d44e8df67c621b870326cc6f6ef78d5d0b79a6fa6b0e86413bb402078e52a134666c37f10bacde40a66a2853d
 EBUILD highlight-3.9.ebuild 1699 SHA256 0996fe561d36f06fd796f6bc6033ca8d40b3d028696fd213c25cb27607cc8c57 SHA512 371f4976ee0cca1006fcf53730d52c042625c2414d1008a82921c2b3e969d541358da1746ca2565c26914f5fcde14d018872376e8e9af315bb925b63d034f9c2 WHIRLPOOL 3c0d8e4ea992fb019edb7d47febcf991df231fbf40a3bf347c05ff37287b31972e924561388f9d94bec08d5d3f03293f3fea84b2b3836eaaa7c54ac9dc5dc699
-MISC ChangeLog 8985 SHA256 f33dc2b13323d7d2d74742a9e85c15e83122522cf5139dcd148bdc0dd41d0917 SHA512 ed6a54fe679c802bab8072cf5b93f94ae2ef3d790bd6729a9632b6398dd44b0553bace65540e0e9dd5e4e24e144135dbcf96dd36261ba75068a4c9cc11133ece WHIRLPOOL 6760d761d169cc022e30408fb35de7e3421487ce430a512502d84ebf8360e174fa75b7a5e682ef016a2e79e87be9c8558f781184c523930ed8fcd8688e45931b
+MISC ChangeLog 9153 SHA256 3814abdd118a583e5bd5dc57320bc23b5a918a201f963f510f2fdb6efa3c7ade SHA512 9b71dde59e34fe22a0dfdec815e449c02270d5950f4baef14f5625718990d77ed2026a81d92c46cbe7fb50a49d6e8341e6147f692c9f9e1f12cb88ce40f2a004 WHIRLPOOL bff1326c9afcb6a49306707196bb50c315ac1b63e24c05141c03ba8910e594bfa04f34584538d7d9221807d02a65dbb58f36121618efd616bf62ec490cc88064
 MISC metadata.xml 157 SHA256 18238fb417d8677a0495cdaba9b043526174ba63b51494b88b10aa7dd903124c SHA512 75e0efcf5c8d50f92e141195133552316ac8583ae52f46ecfaefbf4028c487792e7cd254aef67a6e734ca85f030e4f08cee038d78b9656ecacf5cb3a99b8564c WHIRLPOOL 16b7bdbd1883f22e8f69d3bc36910051cde172c0b49084714f87af8cfc5f4b627a73ee9afa100fd6cb39f4a8c525e9b21b07ad590058bcfd2abf1cd64024db4c
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.20 (GNU/Linux)
+Version: GnuPG v2.0.22 (GNU/Linux)
 
-iEYEAREIAAYFAlHrsdMACgkQCaWpQKGI+9T3lQCdGNXrVKpaRPu8CrsEdMqi5Xms
-8k0An0XIETyflHXuac/uElThTT2OgFoV
-=csDA
+iQEcBAEBCAAGBQJSeDS+AAoJEEqz6FtPBkyjMuIH/1AuP9M3ZCkZZYmA5Hms5adM
+NtZgd8jYE3I2+pnyjwDoypo0eRkvdkMIMxKop/Byz0jVOjOHe0uABU3PH7IDwB/W
+7opiY7d/renqrPJ7pzffIIee1NFtpbK3VStLdYgL9Uz4uTQYXsfodDcujnBZyfgS
+YmHnoO0eLYCgdSk46qkG1PjP/QitNvuY2mfd+Gv+5ds3qfN6HRi4TeE3OK+Bk5Aj
+y/ECFR5a0b5M9JtUEjo73j3qutjCeSusMpbRtXjcSDyV51UYdvRcMzHeDhJP8zlw
+B+woQGkRKi+2xGrFxmw/SxZBexNSysQEQxWgxt6bFY5K8IN+oxHI3AEO5GnT6ik=
+=MZng
 -----END PGP SIGNATURE-----
