@@ -1,0 +1,13 @@
+DEFINED_PHASES=compile configure install prepare unpack
+DEPEND=dev-lang/lua qt4? ( dev-qt/qtgui:4 dev-qt/qtcore:4 ) dev-libs/boost virtual/pkgconfig
+DESCRIPTION=converts source code to formatted text ((X)HTML, RTF, (La)TeX, XSL-FO, XML) with syntax highlight
+EAPI=5
+HOMEPAGE=http://www.andre-simon.de/
+IUSE=examples qt4
+KEYWORDS=~alpha ~amd64 ~arm ~hppa ~ia64 ~ppc ~ppc64 ~s390 ~sh ~sparc ~x86 ~amd64-fbsd ~x86-fbsd ~amd64-linux ~x86-linux ~ppc-macos
+LICENSE=GPL-3
+RDEPEND=dev-lang/lua qt4? ( dev-qt/qtgui:4 dev-qt/qtcore:4 )
+SLOT=0
+SRC_URI=http://www.andre-simon.de/zip/highlight-3.16.tar.bz2
+_eclasses_=base	ec46b36a6f6fd1d0b505a33e0b74e413	eutils	4878e7f88afc0ba0866ac112190b0fd4	flag-o-matic	65cef1287b9d62b1a0f180765d1e0c69	multilib	892e597faee02a5b94eb02ab512e7622	qt4-r2	ce0c9abfee272185e03ab73f09f5fd69	toolchain-funcs	51e6c948e72c43bcc8edc7544411c953	user	d0a4d0735a6c0183d707ca919bd72f28
+_md5_=22c7760a986d462fa371e3a3851c2b70
