@@ -1,6 +1,11 @@
 # ChangeLog for app-text/highlight
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-text/highlight/ChangeLog,v 1.68 2013/07/21 10:02:58 pacho Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-text/highlight/ChangeLog,v 1.69 2013/11/04 23:58:51 radhermit Exp $
+
+*highlight-3.16 (04 Nov 2013)
+
+  04 Nov 2013; Tim Harder <radhermit@gentoo.org> +highlight-3.16.ebuild:
+  Version bump (fixes bug #407243, patch by Matti Bickel).
 
   21 Jul 2013; Pacho Ramos <pacho@gentoo.org> metadata.xml:
   Cleanup due http://gentoo.2317880.n4.nabble.com/sgml-herd-has-no-maintainers-
